changed footer styling and fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -41,11 +41,12 @@
 body{
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
     background: var(--main-gradient);
     font-family: "Source Sans 3", serif;
     color: var(--gray-50);
     position: relative;
-    overflow-x: hidden;
 }
 header{
     display: flex;
@@ -90,6 +91,18 @@ small{
 p{
     margin: 0;
 }
+input{
+    height: 48px;
+    padding: 1rem;
+    box-sizing: border-box;
+    font-family: "Source Sans 3", serif;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: .25rem;
+}
+input[type="email"]{
+    margin: .25rem 0rem 1rem 0rem;
+}
 button{
     font-family: "Source Sans 3", serif;
     display: flex;
@@ -100,6 +113,7 @@ button{
     border-radius: .25rem;
     height: 48px;
     align-items: center;
+    justify-content: center;
 }
 button.primary{
     background: linear-gradient(0deg, var(--primary-800), var(--primary-700));
@@ -140,15 +154,15 @@ nav{
     display: flex;
     gap: 3rem;
 }
-.blob{
+.blob {
     position: absolute;
-    width: 500px;
-    height: 500px;
-    transform: translate(-50%, -50%);
-    z-index: -1;
+    width: 200px;
+    height: 200px;
     filter: blur(100px);
     transform-origin: center;
-}
+    z-index: -1;
+    pointer-events: none;
+  }
 .categories{
     display: flex;
     gap: .5rem;
@@ -464,13 +478,22 @@ nav{
 footer{
     display: flex;
     flex-direction: column;
+    background: var(--gray-900);
+    margin-top: 3rem;
+    padding: 4rem 10%;
 }
 .footer_top{
     display: flex;
+    padding-bottom: 1rem;
 }
 .footer_topleft{
     display: flex;
     width: 30%;
+}
+.topleft_header{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem
 }
 .topleft_input_field{
     display: flex;
@@ -480,4 +503,27 @@ footer{
     display: flex;
     width: 70%;
     justify-content: space-around;
+}
+.disclaimer_text{
+    font-size: .75rem;
+    font-weight: 600;
+    margin-top: 1rem;
+    & a{
+        color: var(--primary-500);
+    }
+}
+.social_media_links{
+    padding: 1rem 0rem;
+    display: flex;
+    gap: .5rem;
+}
+.footer_middle{
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 0rem;
+    border-top: 2px solid var(--gray-600); border-bottom:  2px solid var(--gray-600);
+    & .middle_links{
+        display: flex;
+        gap: 1rem;
+    }
 }
